Refactor compilation-related methods for improved clarity; update logging messages and DTOs for consistency